--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       *{
         font-family: 'Roboto', sans-serif;
         margin:0;
+        overflow-x: hidden ;
       }
     </style>
   </head>
